// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`golden-master: area chart golden-master: area chart axes count 1`] = `40`;

exports[`golden-master: area chart golden-master: area chart legends count 1`] = `5`;

exports[`golden-master: area chart golden-master: area chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M121.4980694980695,342 L121.4980694980695,234.66666666666669 L216.4787644787645,127.33333333333334 L311.4594594594595,20 L311.4594594594595,342 Z",
    "style": {
      "fill": "#1f77b4",
      "opacity": 0.7,
      "stroke": "#1f77b4",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M121.4980694980695,342 L121.4980694980695,181 L216.4787644787645,73.66666666666669 L311.4594594594595,288.3333333333333 L311.4594594594595,342 Z",
    "style": {
      "fill": "#ff7f0e",
      "opacity": 0.7,
      "stroke": "#ff7f0e",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: area chart golden-master: area chart marks count 1`] = `2`;

exports[`golden-master: bar chart golden-master: bar chart axes count 1`] = `40`;

exports[`golden-master: bar chart golden-master: bar chart legends count 1`] = `5`;

exports[`golden-master: bar chart golden-master: bar chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 107.33333333333331,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 48.23529411764705,
    "x": 121.4980694980695,
    "y": 234.66666666666669,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 214.66666666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 48.23529411764705,
    "x": 216.4787644787645,
    "y": 127.33333333333334,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 322,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 48.23529411764705,
    "x": 311.4594594594595,
    "y": 20,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 161,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 48.23529411764705,
    "x": 169.73336361571654,
    "y": 181,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 268.3333333333333,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 48.23529411764705,
    "x": 264.7140585964116,
    "y": 73.66666666666669,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 53.666666666666686,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 48.23529411764705,
    "x": 359.69475357710655,
    "y": 288.3333333333333,
  },
]
`;

exports[`golden-master: bar chart golden-master: bar chart marks count 1`] = `6`;

exports[`golden-master: bubble chart golden-master: bubble chart axes count 1`] = `42`;

exports[`golden-master: bubble chart golden-master: bubble chart legends count 1`] = `5`;

exports[`golden-master: bubble chart golden-master: bubble chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G1",
      "size": 5,
      "x": 1,
      "y": 10,
    },
    "shape": "circle",
    "size": 166.66666666666669,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 112,
    "y": 342,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G1",
      "size": 10,
      "x": 2,
      "y": 20,
    },
    "shape": "circle",
    "size": 333.33333333333337,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 194,
    "y": 181,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G2",
      "size": 8,
      "x": 3,
      "y": 15,
    },
    "shape": "circle",
    "size": 266.6666666666667,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 276,
    "y": 261.5,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G2",
      "size": 12,
      "x": 4,
      "y": 25,
    },
    "shape": "circle",
    "size": 400,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 358,
    "y": 100.49999999999994,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G1",
      "size": 6,
      "x": 5,
      "y": 30,
    },
    "shape": "circle",
    "size": 200,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 440,
    "y": 19.999999999999943,
  },
]
`;

exports[`golden-master: bubble chart golden-master: bubble chart marks count 1`] = `5`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart axes count 1`] = `40`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart legends count 1`] = `5`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 47.35294117647059,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 109.33333333333334,
    "x": 112,
    "y": 29.324324324324323,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 47.35294117647059,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 218.66666666666669,
    "x": 112,
    "y": 122.56756756756756,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 47.35294117647059,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 328,
    "x": 112,
    "y": 215.8108108108108,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 47.35294117647059,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 164,
    "x": 112,
    "y": 76.6772655007949,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 47.35294117647059,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 273.3333333333333,
    "x": 112,
    "y": 169.92050874403816,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 47.35294117647059,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 54.666666666666686,
    "x": 112,
    "y": 263.1637519872814,
  },
]
`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart marks count 1`] = `6`;

exports[`golden-master: combo chart golden-master: combo chart axes count 1`] = `40`;

exports[`golden-master: combo chart golden-master: combo chart legends count 1`] = `0`;

exports[`golden-master: combo chart golden-master: combo chart marks 1`] = `
[
  {
    "clip": {
      "height": 304,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 101.33333333333331,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 68.82352941176471,
    "x": 125.55212355212356,
    "y": 222.66666666666669,
  },
  {
    "clip": {
      "height": 304,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 152,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 68.82352941176471,
    "x": 194.37565296388829,
    "y": 172,
  },
  {
    "clip": {
      "height": 304,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 202.66666666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 68.82352941176471,
    "x": 261.0733590733591,
    "y": 121.33333333333334,
  },
  {
    "clip": {
      "height": 304,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 253.33333333333331,
    "style": {
      "cornerRadius": undefined,
      "fill": "#9467bd",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 68.82352941176471,
    "x": 329.8968884851238,
    "y": 70.66666666666669,
  },
  {
    "clip": {
      "height": 304,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 304,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 68.82352941176471,
    "x": 396.5945945945946,
    "y": 20,
  },
  {
    "clip": {
      "height": 304,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 50.666666666666686,
    "style": {
      "cornerRadius": undefined,
      "fill": "#8c564b",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 68.82352941176471,
    "x": 465.4181240063593,
    "y": 273.3333333333333,
  },
  {
    "clip": {
      "height": 304,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M125.55212355212356,222.66666666666669 L125.55212355212356,172 L261.0733590733591,121.33333333333334 L261.0733590733591,70.66666666666669 L396.5945945945946,20 L396.5945945945946,273.3333333333333",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#1f77b4",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: combo chart golden-master: combo chart marks count 1`] = `7`;

exports[`golden-master: doughnut chart golden-master: doughnut chart axes count 1`] = `0`;

exports[`golden-master: doughnut chart golden-master: doughnut chart legends count 1`] = `7`;

exports[`golden-master: doughnut chart golden-master: doughnut chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "endAngle": -0.9773977261111265,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": -1.5657963267948967,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "endAngle": 0.21939947525641357,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": -0.9673977261111265,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "endAngle": 2.0145952773077243,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 0.22939947525641358,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "endAngle": 2.9121931783333794,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 2.024595277307724,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "endAngle": 4.408189680042804,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 2.922193178333379,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "endAngle": 4.70738898038469,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 4.418189680042804,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
]
`;

exports[`golden-master: doughnut chart golden-master: doughnut chart marks count 1`] = `6`;

exports[`golden-master: funnel chart golden-master: funnel chart axes count 1`] = `32`;

exports[`golden-master: funnel chart golden-master: funnel chart legends count 1`] = `0`;

exports[`golden-master: funnel chart golden-master: funnel chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "count": 1000,
      "stage": "Visitors",
    },
    "height": 71.55555555555556,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 468,
    "x": 112,
    "y": 27.057534246575344,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "count": 600,
      "stage": "Signups",
    },
    "height": 71.55555555555556,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 280.8,
    "x": 112,
    "y": 97.63287671232877,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "count": 300,
      "stage": "Trial",
    },
    "height": 71.55555555555556,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 140.4,
    "x": 112,
    "y": 168.20821917808217,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "count": 100,
      "stage": "Paid",
    },
    "height": 71.55555555555556,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 46.80000000000001,
    "x": 112,
    "y": 238.78356164383564,
  },
]
`;

exports[`golden-master: funnel chart golden-master: funnel chart marks count 1`] = `4`;

exports[`golden-master: line chart golden-master: line chart axes count 1`] = `36`;

exports[`golden-master: line chart golden-master: line chart legends count 1`] = `5`;

exports[`golden-master: line chart golden-master: line chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M121.4980694980695,267.6923076923077 L216.4787644787645,143.84615384615384 L311.4594594594595,20",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#1f77b4",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M121.4980694980695,205.76923076923077 L216.4787644787645,81.9230769230769 L311.4594594594595,329.61538461538464",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#ff7f0e",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: line chart golden-master: line chart marks count 1`] = `2`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart axes count 1`] = `40`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart legends count 1`] = `5`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 128.8,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 121.4980694980695,
    "y": 213.2,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 143.11111111111111,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 216.4787644787645,
    "y": 198.88888888888889,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 276,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 311.4594594594595,
    "y": 66,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 193.2,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 121.4980694980695,
    "y": 20,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 178.88888888888889,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 216.4787644787645,
    "y": 20,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 46,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 311.4594594594595,
    "y": 20,
  },
]
`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart marks count 1`] = `6`;

exports[`golden-master: pie chart golden-master: pie chart axes count 1`] = `0`;

exports[`golden-master: pie chart golden-master: pie chart legends count 1`] = `7`;

exports[`golden-master: pie chart golden-master: pie chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "endAngle": -0.9773977261111265,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": -1.5657963267948967,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "endAngle": 0.21939947525641357,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": -0.9673977261111265,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "endAngle": 2.0145952773077243,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 0.22939947525641358,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "endAngle": 2.9121931783333794,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 2.024595277307724,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "endAngle": 4.408189680042804,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 2.922193178333379,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "endAngle": 4.70738898038469,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 4.418189680042804,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 245,
    "y": 190,
  },
]
`;

exports[`golden-master: pie chart golden-master: pie chart marks count 1`] = `6`;

exports[`golden-master: radar chart golden-master: radar chart axes count 1`] = `36`;

exports[`golden-master: radar chart golden-master: radar chart legends count 1`] = `5`;

exports[`golden-master: radar chart golden-master: radar chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M121.4980694980695,267.6923076923077 L216.4787644787645,143.84615384615384 L311.4594594594595,20",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#1f77b4",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M121.4980694980695,205.76923076923077 L216.4787644787645,81.9230769230769 L311.4594594594595,329.61538461538464",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#ff7f0e",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: radar chart golden-master: radar chart marks count 1`] = `2`;

exports[`golden-master: scatter chart golden-master: scatter chart axes count 1`] = `42`;

exports[`golden-master: scatter chart golden-master: scatter chart legends count 1`] = `0`;

exports[`golden-master: scatter chart golden-master: scatter chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G1",
      "size": 5,
      "x": 1,
      "y": 10,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 112,
    "y": 342,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G1",
      "size": 10,
      "x": 2,
      "y": 20,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 229,
    "y": 181,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G2",
      "size": 8,
      "x": 3,
      "y": 15,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 346,
    "y": 261.5,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G2",
      "size": 12,
      "x": 4,
      "y": 25,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 463,
    "y": 100.49999999999994,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "group": "G1",
      "size": 6,
      "x": 5,
      "y": 30,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 580,
    "y": 19.999999999999943,
  },
]
`;

exports[`golden-master: scatter chart golden-master: scatter chart marks count 1`] = `5`;

exports[`golden-master: stacked area chart golden-master: stacked area chart axes count 1`] = `40`;

exports[`golden-master: stacked area chart golden-master: stacked area chart legends count 1`] = `5`;

exports[`golden-master: stacked area chart golden-master: stacked area chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M121.4980694980695,270.44444444444446 L216.4787644787645,198.88888888888889 L311.4594594594595,127.33333333333334 L311.4594594594595,342 L216.4787644787645,342 L121.4980694980695,342 Z",
    "style": {
      "fill": "#1f77b4",
      "opacity": 0.7,
      "stroke": "#1f77b4",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M121.4980694980695,163.11111111111111 L216.4787644787645,20 L311.4594594594595,91.55555555555554 L311.4594594594595,127.33333333333334 L216.4787644787645,198.88888888888889 L121.4980694980695,270.44444444444446 Z",
    "style": {
      "fill": "#ff7f0e",
      "opacity": 0.7,
      "stroke": "#ff7f0e",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: stacked area chart golden-master: stacked area chart marks count 1`] = `2`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart axes count 1`] = `40`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart legends count 1`] = `5`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 107.33333333333331,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 121.4980694980695,
    "y": 234.66666666666669,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 214.66666666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 216.4787644787645,
    "y": 127.33333333333334,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 322,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 311.4594594594595,
    "y": 20,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 161,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 121.4980694980695,
    "y": 73.66666666666669,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 268.3333333333333,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 216.4787644787645,
    "y": -140.99999999999997,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 53.666666666666686,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 96.4705882352941,
    "x": 311.4594594594595,
    "y": -33.666666666666686,
  },
]
`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart marks count 1`] = `6`;

exports[`golden-master: stock chart golden-master: stock chart axes count 1`] = `38`;

exports[`golden-master: stock chart golden-master: stock chart legends count 1`] = `0`;

exports[`golden-master: stock chart golden-master: stock chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "close": 105,
      "date": "Mon",
      "high": 110,
      "low": 95,
      "open": 100,
    },
    "height": 281.75,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 83.57142857142857,
    "x": 120.25105782792666,
    "y": 60.25,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "close": 108,
      "date": "Tue",
      "high": 115,
      "low": 100,
      "open": 105,
    },
    "height": 289.79999999999995,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 83.57142857142857,
    "x": 202.76163610719323,
    "y": 52.200000000000045,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "close": 112,
      "date": "Wed",
      "high": 120,
      "low": 102,
      "open": 108,
    },
    "height": 300.5333333333333,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 83.57142857142857,
    "x": 285.2722143864598,
    "y": 41.4666666666667,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "close": 107,
      "date": "Thu",
      "high": 118,
      "low": 105,
      "open": 112,
    },
    "height": 287.1166666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 83.57142857142857,
    "x": 367.7827926657264,
    "y": 54.88333333333338,
  },
  {
    "clip": {
      "height": 322,
      "width": 468,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "close": 120,
      "date": "Fri",
      "high": 125,
      "low": 103,
      "open": 107,
    },
    "height": 322,
    "style": {
      "cornerRadius": undefined,
      "fill": "#9467bd",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 83.57142857142857,
    "x": 450.29337094499294,
    "y": 20,
  },
]
`;

exports[`golden-master: stock chart golden-master: stock chart marks count 1`] = `5`;

exports[`golden-master: waterfall chart golden-master: waterfall chart axes count 1`] = `42`;

exports[`golden-master: waterfall chart golden-master: waterfall chart legends count 1`] = `11`;

exports[`golden-master: waterfall chart golden-master: waterfall chart marks 1`] = `
[
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "label": "Revenue",
      "value": 100,
    },
    "height": 229.99999999999997,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 58.57142857142857,
    "x": 117.78279266572638,
    "y": 20.00000000000003,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "label": "COGS",
      "value": -40,
    },
    "height": 92,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 58.57142857142857,
    "x": 175.61071932299012,
    "y": 250,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "label": "OpEx",
      "value": -30,
    },
    "height": 69,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 58.57142857142857,
    "x": 233.43864598025385,
    "y": 250,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "label": "Tax",
      "value": -10,
    },
    "height": 23,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 58.57142857142857,
    "x": 291.26657263751764,
    "y": 250,
  },
  {
    "clip": {
      "height": 322,
      "width": 328,
      "x": 112,
      "y": 20,
    },
    "datum": {
      "label": "Net",
      "value": 20,
    },
    "height": 46,
    "style": {
      "cornerRadius": undefined,
      "fill": "#9467bd",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 58.57142857142857,
    "x": 349.0944992947814,
    "y": 204,
  },
]
`;

exports[`golden-master: waterfall chart golden-master: waterfall chart marks count 1`] = `5`;
